--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,30 @@ buildscript {
     }
 }
 
+ext {
+    rxVersion = "2.1.7"
+    rxAndroidVersion = "2.0.2"
+    timberVersion = "4.7.1"
+    retrofitVersion = "2.4.0"
+    okHttpVersion = "3.9.1"
+    supportVersion = "28.0.0"
+    constraintVersion = "1.1.3"
+    butterknife = "8.8.1"
+    firebaseVersion = "11.3.0"
+    daggerVersion = "2.13"
+    glideVersion = "4.7.1"
+    coroutinesVersion = "1.2.0"
+    multiDexVersion = "2.0.1"
+
+    androidxVersion = "1.0.2"
+    gsonVersion = "2.3.0"
+    loggingInterVersion = "3.9.1"
+    okhttp = "3.12.1"
+    materialProgressVersion = "1.7"
+    coroutinesAdapterVersion = "0.9.2"
+    vectorDrawableVersion = "1.0.1"
+}
+
 allprojects {
     repositories {
         google()
