--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation project(":data")
+    api project(":common")
 
     /*Kotlin*/
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
