--- a/data/build.gradle
+++ b/data/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'com.android.library'
 
+apply plugin: 'kotlin-android'
+
 android {
     compileSdkVersion 28
 
@@ -28,10 +30,7 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.0.2'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 
-
-    implementation project(':domain')
-    api project(":common")
+    api project(":domain")
+    implementation project(":common")
 }
